# model-run

./: 2x_h100.lambda.env.example  8x_a100_40gb.lambda.env.example  MODIFIED_REASONING_ECONOMICS.md  PATCHED_FORKS.md  README.md  _common.sh  bootstrap_2x_h100_lambda.sh  bootstrap_8x_a100_40gb_lambda.sh  bootstrap_openenv_server.sh  bootstrap_p5_4xlarge_h100_lambda.sh  gh200.lambda.env.example  p5_4xlarge_h100.lambda.env.example  preflight_2x_h100_lambda.sh  preflight_8x_a100_40gb_lambda.sh  preflight_p5_4xlarge_h100_lambda.sh  qwen3_32b_reference.lambda.env.example  run_2x_h100_lambda.sh  run_8x_a100_40gb_lambda.sh  run_p5_4xlarge_h100_lambda.sh  scout_p5_4xlarge_h100_lambda.sh  start_openenv_server.sh
ReasoningEconomicsEnv/: .dockerignore  .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
ReasoningEconomicsEnv/baselines/: __init__.py  difficulty_oracle.py  greedy_max.py  uniform.py
ReasoningEconomicsEnv/baselines/dummy/: __init__.py  difficulty_oracle.py  greedy_max.py  uniform.py
ReasoningEconomicsEnv/baselines/llm/: __init__.py  api_chat.py  base.py  local_vllm.py
ReasoningEconomicsEnv/data/: __init__.py  loaders.py  question.py
ReasoningEconomicsEnv/env/: __init__.py  config.py  episode_sampler.py  grading.py  models.py  reason_budget_env.py  reward.py
ReasoningEconomicsEnv/server/: Dockerfile  __init__.py  app.py  docker-entrypoint.sh  requirements.txt
ReasoningEconomicsPT/: requirements.lambda.txt
ReasoningEconomicsPT/eval/: evaluate.py
ReasoningEconomicsPT/scripts/: analyze_reward_logs.py  bootstrap_lambda.sh  (+4 more)
(+5 files in other folders)
