[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reasoning-economic-env"
version = "2.0.0"
description = "OpenEnv RL environment for post-training LLMs on sequential reasoning budget allocation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "sympy>=1.12",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "trl>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]
gpu = ["vllm>=0.6.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "baselines*", "data*", "eval*", "server*", "training*"]
